# uvbrew

./: LICENSE  README.md  makefile  pyproject.toml
src/uvbrew/: __init__.py  uvbrew.py
